--- a/css/screens.css
+++ b/css/screens.css
@@ -44,20 +44,22 @@ main {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-main img {
+img {
     display: block;
     margin: 20px auto;
+    max-width: 900px;
     border-radius: 50%;
     border: 5px solid #eee;
+    
 }
 
-main p {
+p {
     font-size: 1rem;
     margin-bottom: 20px;
     text-align: justify;
 }
 
-main h2, main h3 {
+h2, h3 {
     color: #333;
     margin-top: 30px;
     border-bottom: 2px solid #eee;
