--- a/css/test.css
+++ b/css/test.css
@@ -1,5 +1,6 @@
 @font-face {
     font-family: 'Be Vietnam Pro';
+    src: url('/font/Be_Vietnam_Pro/BeVietnamPro-Medium.ttf') format('truetype');
     src: url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;600;700;800&display=swap');
 }
 body {
