--- a/css/test.css
+++ b/css/test.css
@@ -77,13 +77,13 @@ a {
 
 footer {
     text-align: center;
-    padding: 20px;
+    padding: 10px;
     background-color: #f1f1f1;
     border-top: 1px solid #ccc;
 }
 
 footer p {
-    margin: 5px 0;
+    margin:0;
     font-size: 0.9rem;
     color: #666;
 }
@@ -91,7 +91,7 @@ footer p {
 footer a {
     text-decoration: none;
     color: #c58333;
-    margin: 0 10px;
+    margin: 0;
 }
 
 footer a:hover {
